css fucker med mig, help

--- a/index.html
+++ b/index.html
@@ -52,7 +52,13 @@
                         <img src="">
                     </div>
                     <div class="beers"></div>
-                    <div class="lvl"></div>
+                    <div class="lvl">
+                    </div>
+
+                    <div class="procent">
+                        <div class="indhold"></div>
+                    </div>
+                   
                     <div class="capa"></div>
                     
                 </div>
